--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "htaccess": "node scripts/add-htaccess.js",
-    "build:static": "next build --no-lint && npm run htaccess"
+    "build:static": "dotenv -e .env.prod -- next build --no-lint && npm run htaccess"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
@@ -27,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4.1.12",
